# todo-app-evolution

./: .gitignore  CLAUDE.md  README.md  phase-one-completed-report.md  pyproject.toml
.claude/agents/: claude-code-implementer.md  phase-orchestrator.md  python-console-architect.md  requirements-ingestor.md  task-planner.md
.claude/skills/claude-code-operation/: SKILL.md
.claude/skills/constraint-enforcement/: SKILL.md
.claude/skills/python-console-architecture/: SKILL.md
.claude/skills/spec-interpretation/: SKILL.md
.claude/skills/spec-refinement/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example
backend/app/: config.py  database.py  main.py
backend/tests/: test_auth.py
frontend/: .env.example  .gitignore  auth.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useAuth.ts  useTasks.ts
frontend/lib/: config.ts
frontend/types/: task.ts
history/adr/: 0001-in-memory-data-architecture-with-modular-project-structure.md  0002-interactive-menu-driven-cli-pattern.md  0003-frontend-technology-stack.md  0004-frontend-authentication-architecture.md  0005-api-communication-pattern.md
specs/001-cli-task-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-auth-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  cli.py  main.py  task_model.py  task_store.py
(+66 files in other folders)
