# Task ID: T003
# CLI Task Management Application - Phase I
# Project configuration for UV package manager

[project]
name = "todo-app"
version = "0.1.0"
description = "CLI Task Management Application - Phase I"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
