# Task ID: T003
# CLI Task Management Application - Phase I + Phase II Backend
# Project configuration for UV package manager

[project]
name = "todo-app"
version = "0.2.0"
description = "Evolution of Todo - CLI and Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Phase I CLI
    # (no external dependencies for Phase I)

    # Phase II Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "pyjwt[crypto]>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "backend/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
